# cop

./: .replit  app.py  pyproject.toml  replit.md  subtitle_presets.json
assets/: style.css
utils/: arabic_text.py  audio_handler.py  file_browser.py  subtitle_renderer.py  video_processor.py  youtube_downloader.py
youtube_downloads/: Je répare les nids de poule pour 2€⧸jour....ar.srt  J’ai fui l’Indonésie pour éviter la prison.ar.srt
